Adds login view
Adds login view

--- a/src/main/resources/APachas/src/app/app.component.html
+++ b/src/main/resources/APachas/src/app/app.component.html
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+<!--  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand">APACHAS</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -14,7 +14,7 @@
         <a *ngIf="authenticationService.getUser().authenticated == true" class="nav-link active" aria-current="page" (click)="logOut()"><i class="bi bi-box-arrow-right" style="font-size: 1.5rem; color: black;"></i></a>
       </div>
     </div>
-  </nav>
+  </nav>-->
 </header>
 <main class="container h-100">
   <router-outlet></router-outlet>
