--- a/src/main/resources/APachas/src/app/components/register/register.component.css
+++ b/src/main/resources/APachas/src/app/components/register/register.component.css
@@ -6,7 +6,6 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
-
 section
 {
   position: relative;
@@ -22,13 +21,12 @@ section
 section .container
 {
   position: relative;
-  width: 800px;
-  height: 500px;
+  width: 850px;
+  height: 550px;
   background: #fff;
   box-shadow: 0 15px 50px rgba(0,0,0,0.8);
   overflow: hidden;
 }
-
 section .container .user
 {
   position: absolute;
@@ -38,7 +36,6 @@ section .container .user
   height: 100%;
   display: flex;
 }
-
 section .container .user .imgBx
 {
   position: relative;
@@ -47,6 +44,23 @@ section .container .user .imgBx
   transition: 0.5s;
 }
 
+section .container .user .formBx .signin
+{
+  position: relative;
+  margin-top: 20px;
+  font-size: 12px;
+  letter-spacing: 1px;
+  color: #555;
+  text-transform: uppercase;
+  font-weight: 300;
+}
+
+section .container .user .formBx .signin a
+{
+  font-weight: 600;
+  text-decoration: none;
+  color: #66bb6a;
+}
 section .container .user .imgBx img
 {
   position: absolute;
@@ -56,7 +70,6 @@ section .container .user .imgBx img
   height: 100%;
   object-fit: cover;
 }
-
 section .container .user .formBx
 {
   position: relative;
@@ -69,7 +82,6 @@ section .container .user .formBx
   padding: 40px;
   transition: 0.5s;
 }
-
 section .container .user .formBx h2
 {
   font-size: 18px;
@@ -81,7 +93,6 @@ section .container .user .formBx h2
   margin-bottom: 10px;
   color: #555;
 }
-
 section .container .user .formBx input
 {
   width: 100%;
@@ -96,7 +107,6 @@ section .container .user .formBx input
   letter-spacing: 1px;
   font-weight: 300;
 }
-
 section .container .user .formBx input[type="submit"]
 {
   max-width: 125px;
@@ -109,41 +119,17 @@ section .container .user .formBx input[type="submit"]
   transition: 0.5s;
 }
 
-section .container .user .formBx .signup
-{
-  position: relative;
-  margin-top: 20px;
-  font-size: 12px;
-  letter-spacing: 1px;
-  color: #555;
-  text-transform: uppercase;
-  font-weight: 300;
-}
-
-section .container .user .formBx .signup a
-{
-  font-weight: 600;
-  text-decoration: none;
-  color: #66bb6a;
-}
-
-section .container .signinBx .formBx
+section .container .signupBx .formBx
 {
   top: 0;
 }
-section .container .active .signinBx .formBx
-{
-  top: 100%;
-}
-section .container .signinBx .imgBx
+
+section .container .signupBx .imgBx
 {
   top: 0;
   transition: 0.5s;
 }
-section .container .active .signinBx .imgBx
-{
-  top: -100%;
-}
+
 
 @media (max-width: 991px)
 {
@@ -159,7 +145,7 @@ section .container .active .signinBx .imgBx
   {
     width: 100%;
   }
-  section .container .active .signinBx .formBx
+  section .container .active .signupBx .formBx
   {
     top:-100%;
   }
