--- a/src/main/resources/APachas/src/app/components/groups/listGroups/listGroups.component.css
+++ b/src/main/resources/APachas/src/app/components/groups/listGroups/listGroups.component.css
@@ -24,19 +24,39 @@
     font-size: 14px;
     letter-spacing: 1px;
     font-weight: 300;
-    background: url("../../../assets/search.svg")  top left no-repeat #f5f5f5;
+    background: url("../../../../assets/search.svg")  top left no-repeat #f5f5f5;
     background-size: 1rem;
     background-position-y: 13px;
     background-position-x: 5px;
     padding-left:30px;
 }
+
 input[type="search"]::-webkit-search-cancel-button{
     -webkit-appearance: none;
-    background-image: url("../../../assets/closeSearch.svg");
+    background-image: url("../../../../assets/closeSearch.svg");
     background-size: 0.8rem 0.8rem;
     width: 0.8rem;
     height: 0.8rem;
     cursor:pointer;
+}
+
+.createDiv{
+    text-align: left !important;
+}
+
+.button
+{
+    cursor:pointer;
+    border: none;
+    width: 40px;
+    height: 40px;
+    background: url("../../../../assets/add.svg") top left no-repeat;
+    background-position: center;
+    background-size: 40px 40px;
+}
+
+.divAligment{
+    text-align: center !important;
 }
 
 .col{
@@ -48,17 +68,9 @@ input[type="search"]::-webkit-search-cancel-button{
     border: none;
 }
 
-.col-xxl-5{
-    text-align: center;
-}
-.col-xl-12{
-    text-align: center;
-}
-.col-md-12{
-    text-align: center;
-}
-.col-sm-5{
-    text-align: center;
+.color:hover{
+    background: rgba(102, 187, 106, 0.12);
+    cursor:pointer;
 }
 
 .image {
@@ -68,88 +80,12 @@ input[type="search"]::-webkit-search-cancel-button{
     box-shadow: 0 10px 50px rgba(0,0,0,0.5);
 }
 
-.col-xxl-7{
-    align-self: center;
-}
-.col-xl-12{
-    align-self: center;
-}
-.col-sm-7{
-    align-self: center;
-}
-
-.card-body-xxl-7{
-    text-align: center;
-}
-
-.card-body-xl-12{
-    text-align: center;
-}
-
-.card-body-md-12{
-    text-align: center;
-}
-
-.card-body-sm-7{
-    text-align: center;
-}
-
 .title{
     font-size: 20px;
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 2px;
-}
-
-.card-text{
-    padding-top: 5px;
-    text-align: right;
-}
-
-.status
-{
-    cursor:pointer;
-    border: none;
-    width: 13px;
-    height: 13px;
-    padding-right: 15px;
-    background: url("../../../assets/right.svg") top left no-repeat;
-    background-position: center;
-    background-size: 13px 13px;
-}
-
-.message
-{
-    cursor:pointer;
-    text-decoration: none;
-    color: #66bb6a;
-    border: none;
-    outline: none;
-    box-shadow: none;
-    font-size: 12px;
-    letter-spacing: 1px;
-    font-weight: 300;
-    text-transform: uppercase;
-    padding-right: 5px;
-}
-
-.accept
-{
-    border: none;
-    width: 14px;
-    height: 14px;
-    padding-right: 15px;
-    background: url("../../../assets/check.svg") top left no-repeat;
-    background-size: 14px 14px;
-}
-
-.refuse
-{
-    border: none;
-    width: 14px;
-    height: 14px;
-    background: url("../../../assets/close.svg")  top left no-repeat;
-    background-size: 14px 14px;
+    padding-top: 25%;
 }
 
 div.paginationDiv {
@@ -161,7 +97,6 @@ ul li {
 }
 
 ul li a {
-    float: left;
     padding: 8px 16px;
     text-decoration: none;
     transition: background-color .3s;
@@ -182,13 +117,23 @@ ul li:first-child a
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
     cursor:pointer;
+
 }
 
 ul li:last-child a
 {
+
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     cursor:pointer;
+}
+
+.previous{
+    float: left;
+}
+
+.next{
+    float: right;
 }
 
 /*XXL*/
@@ -197,7 +142,10 @@ ul li:last-child a
         padding-right: 20px;
     }
     .searchDiv input {
-        width: 23%;
+        width: 40%;
+    }
+    .searchDiv{
+        text-align: right;
     }
 }
 
@@ -208,9 +156,13 @@ ul li:last-child a
     }
     .card-text{
         text-align: center;
+        padding-left: 0px;
     }
     .searchDiv input {
-        width: 27%;
+        width: 45%;
+    }
+    .searchDiv{
+        text-align: right;
     }
 }
 
@@ -220,7 +172,10 @@ ul li:last-child a
         padding-right: 30px;
     }
     .searchDiv input {
-        width: 33%;
+        width: 55%;
+    }
+    .searchDiv{
+        text-align: right;
     }
 }
 
@@ -231,10 +186,15 @@ ul li:last-child a
     }
     .card-text{
         text-align: center;
+        padding-left: 0px;
     }
     .searchDiv input {
-        width: 42%;
+        width: 70%;
     }
+    .searchDiv{
+        text-align: center;
+    }
+
 }
 
 /*S*/
@@ -243,7 +203,13 @@ ul li:last-child a
         padding-right: 45px;
     }
     .searchDiv input {
-        width: 57%;
+        width: 100%;
+    }
+    .searchDiv{
+        text-align: right;
+    }
+    .createDiv{
+        text-align: center!important;
     }
 }
 
@@ -254,8 +220,16 @@ ul li:last-child a
     }
     .card-text{
         text-align: center;
+        padding-left: 0px;
     }
     .searchDiv input {
-        width: 55%;
+        width: 80%;
+    }
+    .searchDiv{
+        text-align: right;
+    }
+    .createDiv{
+        padding-top: 10px;
+        text-align: center!important;
     }
 }
