--- a/src/main/resources/APachas/src/app/components/users/listUsers/listUsers.component.html
+++ b/src/main/resources/APachas/src/app/components/users/listUsers/listUsers.component.html
@@ -1,12 +1,14 @@
 <div class="searchDiv col-auto text-center">
     <form ngNativeValidate (input)="searchInput()" #searchUsersForm="ngForm">
-        <input type="search" id="friend_nameLogin" name="nameLogin" placeholder="Buscar por nombre de usuario" [(ngModel)]="login" required #userLoginForm="ngModel" aria-label="Search">
+        <input type="search" id="friend_nameLogin" name="nameLogin" placeholder="Buscar por nombre de usuario"
+               [(ngModel)]="login" required #userLoginForm="ngModel" aria-label="Search">
     </form>
 </div>
+<app-detailUser (eventSave)="setPage($event.valueOf()[1]); setIndex($event.valueOf()[0])" [selectedUsers]="this.selectedUsersDetails"></app-detailUser>
 <div class="row row-cols-1 row-cols-xxl-3 row-cols-xl-3 row-cols-lg-2 row-cols-md-2 row-cols-sm-1 g-4">
     <div *ngFor="let user of users">
         <div class="col">
-            <div class="card mb-3">
+            <div class="card mb-3 color" data-bs-toggle="modal" data-bs-target="#detailUserModal" (click)="selectUser(users.indexOf(user))">
                 <div class="row g-0">
                     <div class="col-xxl-5 col-xl-12 col-lg-5 col-md-12 col-sm-5">
                         <ng-container *ngIf="user.userPhoto != null; else imagesDiv">
@@ -20,15 +22,18 @@
                         <div class="card-body-xxl-7 card-body-xl-12 card-body-lg-7 card-body-md-12 card-body-sm-7">
                             <h5 class="title">{{user.userLogin}}</h5>
                             <p class="card-text">
-                                <ng-container *ngIf="messages[user.userId] != null; else friendsDiv">
-                                    <a type="button" class="message" (click)="setStatus(user.userId)">{{ messages[user.userId]}}</a>
+                                <!--<ng-container *ngIf="messages[user.userId] != null; else friendsDiv">
+                                    <a type="button" class="message"
+                                       (click)="setStatus(user.userId)">{{ messages[user.userId]}}</a>
                                     <button type="button" class="accept" (click)="acceptButton(user.userId)"></button>
                                     <button type="button" class="refuse" (click)="refuseButton(user.userId)"></button>
                                 </ng-container>
                                 <ng-template #friendsDiv>
-                                    <a *ngIf="messages[user.userId] == null" class="message" (click)="setStatus(user.userId)">{{friends[user.userId]}}</a>
+                                    <a *ngIf="messages[user.userId] == null" class="message"
+                                       (click)="setStatus(user.userId)">{{friends[user.userId]}}</a>
                                     <a class="status" (click)="setStatus(user.userId)"></a>
-                                </ng-template>
+                                </ng-template>-->
+                                <a class="message">{{friends[user.userId]}}</a>
                             </p>
                         </div>
                     </div>
@@ -38,8 +43,10 @@
     </div>
 </div>
 <div class="paginationDiv">
-    <ul class="pagination">
-        <li class="page-item" *ngIf="page!=0"><a class="page-link" (click)="setPage(-1)">Anterior</a></li>
-        <li class="page-item" *ngIf="page+1<totalPage"><a class="page-link" (click)="setPage(1)">Siguiente</a></li>
+    <ul class="row pagination">
+        <li class="page-item" [ngClass]="previous" *ngIf="page!=0"><a class="page-link previous" (click)="setPage(-1)">Anterior</a>
+        </li>
+        <li class="page-item" [ngClass]="next" *ngIf="page+1<totalPage"><a class="page-link next" (click)="setPage(1)">Siguiente</a>
+        </li>
     </ul>
 </div>
