--- a/src/main/resources/APachas/src/app/components/groups/createGroup/createGroup.component.css
+++ b/src/main/resources/APachas/src/app/components/groups/createGroup/createGroup.component.css
@@ -115,13 +115,26 @@
     width:50px;
     height:50px;
     border-radius:90px;
-    box-shadow: 0 10px 50px rgba(0,0,0,0.5);
 }
 
 .selectedText{
     position: relative;
     display: inline-block;
     padding-left: 10px;
+    text-transform: uppercase;
+    font-size: 10px;
+}
+
+.listSelect{
+    font-size: 14px;
+}
+
+.ng-value{
+    background-color: white !important;
+}
+
+.ng-value-icon{
+    border-color: #dddddd !important;
 }
 
 .buttons{
@@ -132,15 +145,10 @@
 .button {
     width: 100%;
     padding: 10px;
-    background: #f5f5f5;
-    color: #333;
     border: none;
     outline: none;
     box-shadow: none;
-    font-size: 14px;
     margin: 8px 0;
-    letter-spacing: 1px;
-    font-weight: 300;
     max-width: 125px;
     background: #66bb6a;
     color: #fff;
@@ -154,6 +162,7 @@
 .close{
     background: #555;
 }
+
 
 @media (max-width: 340px) {
     .buttons{
