--- a/src/main/resources/APachas/src/app/components/groups/detailGroup/detailGroup.component.css
+++ b/src/main/resources/APachas/src/app/components/groups/detailGroup/detailGroup.component.css
@@ -19,6 +19,7 @@
 
 .row{
     align-content: center;
+    padding-bottom: 10px;
 }
 
 .col{
@@ -38,7 +39,6 @@
     height:173px;
     border-radius:90px;
     background-color: white;
-    box-shadow: 0 10px 50px rgba(0,0,0,0.5);
 }
 
 .description-row{
@@ -61,10 +61,36 @@
 
 div.paginationMemberDiv {
     padding-top: 10px;
-    overflow: auto;
-    border-style: solid;
-    border-radius: 5px;
-    border-color: #333333;
+    height: 290px;
+    overflow: scroll;
+    border-left-style: solid;
+    border-color:  #f5f5f5;
+}
+
+.paginationMemberDiv::-webkit-scrollbar{
+    -webkit-appearance: none;
+}
+
+.paginationMemberDiv::-webkit-scrollbar:vertical{
+    width: 10px;
+}
+
+.paginationMemberDiv::-webkit-scrollbar-button:increment, .paginationMemberDiv::-webkit-scrollbar-button{
+    display: none;
+}
+
+.paginationMemberDiv::-webkit-scrollbar:horizontal{
+    height: 10px;
+}
+
+.paginationMemberDiv::-webkit-scrollbar-thumb{
+    background: #f1f1f1;
+    border-radius: 20px;
+    border: 2px solid #f1f1f1;
+}
+
+.paginationMemberDiv::-webkit-scrollbar-track{
+    border-radius: 10px;
 }
 
 .paginationMember{
@@ -79,79 +105,26 @@ div.paginationMemberDiv {
     width:100px;
     height:100px;
     border-radius:90px;
-    box-shadow: 0 10px 50px rgba(0,0,0,0.5);
+    background-color: white;
 }
 
-.nameMember{
-    margin-top: -8px;
+.imageP{
+    width: 100%;
 }
 
 .member{
+    margin-top: -8px;
     font-size: 12px;
     letter-spacing: 1px;
     text-transform: uppercase;
     font-weight: 300;
     color: #333;
-    text-align: center;
-    width:100px;
+    width:100%;
 }
 
 .owner{
     border-style: solid;
     border-color: rgba(102, 187, 106, 0.53);
-    box-shadow: 0 10px 50px rgba(102, 187, 106, 0.2);
-}
-
-ul.paginationMember{
-    list-style-type:none;
-    display:flex;
-}
-
-ul.paginationMember li{
-    display: inline;
-    border: none;
-}
-
-ul.paginationMember li a{
-    text-decoration: none;
-    transition: background-color .3s;
-    border: 1px solid #ffffff;
-    box-shadow: none;
-    font-size: 14px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    text-align: center;
-    font-weight: 300;
-    background: #f5f5f5;
-    color: #333;
-    outline: none;
-    padding: 8px 16px;
-}
-
-ul.paginationMember li:first-child a
-{
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    cursor:pointer;
-}
-
-ul.paginationMember li:last-child a
-{
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    cursor:pointer;
-}
-
-.itemPosition{
-    padding-left: 12%;
-}
-
-.itemPosition:first-child{
-    padding-left: 20%;
-}
-
-.nextMember{
-    float: right;
 }
 
 .date{
@@ -160,18 +133,13 @@ ul.paginationMember li:last-child a
     padding-top: 10px;
 }
 
-
-div.paginationUserGroupDiv {
-    padding-top: 10px;
+.modal-body{
+    margin-bottom: -25px;
 }
-
-.paginationUserGroup{
-    align-items: center;
-}
-
 ul.paginationUserGroup{
-    list-style-type:none;
-    display:flex;
+    display: flex;
+    padding-left: 0;
+    list-style: none;
     width: 100%;
 }
 
@@ -232,6 +200,26 @@ ul.paginationUserGroup li:last-child a
     background-size: 40px 40px;
 }
 
+.more a{
+    position: relative;
+    margin-top: 20px;
+    font-size: 12px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-weight: 600;
+    text-decoration: none;
+    color: #66bb6a;
+    cursor:pointer;
+    vertical-align: center;
+}
+.more{
+    display:flex;
+    justify-content: center;
+    align-items: end;
+    padding-bottom: 20px;
+
+}
+
 .deleteButton{
     cursor:pointer;
     border: none;
@@ -248,4 +236,28 @@ ul.paginationUserGroup li:last-child a
 
 .closeButton{
     margin-top: -50px;
+}
+
+@media (max-width: 349px) {
+
+    ul.paginationUserGroup li {
+        padding-bottom: 20px;
+    }
+    .previousUserGroup{
+        float: none;
+        margin-left: -40px;
+    }
+
+    .nextUserGroup{
+        float: none;
+    }
+
+    div.paginationMemberDiv {
+        height: 145px;
+        border-left-style: none;
+    }
+
+    .editDiv{
+        padding-left: 15px;
+    }
 }
