--- a/src/main/resources/APachas/src/app/components/groups/detailGroup/detailGroup.component.html
+++ b/src/main/resources/APachas/src/app/components/groups/detailGroup/detailGroup.component.html
@@ -1,5 +1,6 @@
 <div class="modal fade" id="detailGroupModal" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false"
      aria-labelledby="detailGroupLabel" aria-hidden="true">
+    <app-messageConfirm (eventMessageConfirm)="onDelete($event)" [message]=message></app-messageConfirm>
     <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
             <div class="modal-header">
@@ -10,8 +11,8 @@
                             (click)="pageMember=0"></button>
                 </div>
                 <div class="deleteDiv">
-                    <button type="button" class="deleteButton" title="Eliminar grupo" data-bs-dismiss="modal"
-                            (click)="delete(); pageMember=0"></button>
+                    <button type="button" class="deleteButton" title="Eliminar grupo"  data-bs-toggle="modal" data-bs-target="#messageConfirmModal"
+                             (click)="messageValue();pageMember=0"></button>
                 </div>
                 <button type="button" id="closeButton" class="btn-close closeButton" data-bs-dismiss="modal"
                         aria-label="Close"
@@ -20,7 +21,7 @@
             <div class="modal-body">
                 <div class="col container-fluid">
                     <div class="row">
-                        <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                        <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
                             <div class="imageGroupDiv">
                                 <ng-container *ngIf="userGroup.userGroupPhoto; else imagesDiv">
                                     <img class="imageGroup" [src]="userGroup.userGroupPhoto" alt=""
@@ -30,77 +31,48 @@
                                     <img class="imageGroup" [src]="defaultImage">
                                 </ng-template>
                                 <div class="date text">
-                                    Creación: {{userGroup.userGroupCreation}}</div>
+                                    Creación: {{userGroup.userGroupCreation | date: 'dd-MM-yyyy'}}</div>
                                 <div class="description-row text"
                                      name="userGroupDescription"
                                      id="detailUserGroup_userGroupDescription">
                                     {{userGroup.userGroupDescription}}
+
                                 </div>
                             </div>
                         </div>
-                        <div class="paginationMemberDiv col-xxl-6 col-xl-6 col-lg-6 col-md-6 col-sm-6">
-                            <div *ngFor="let user of groupMembers" class="col-xxl-6 col-xl-6 col-lg-6 col-md-6 col-sm-6">
-                                <ng-container *ngIf="user.userPhoto; else userImagesDiv">
-                                    <p title="{{owner(user.userId)}}">
-                                        <img class="imageMember" [ngClass]="ownerBorder(user.userId)"
-                                           [src]="user.userPhoto" alt="" id="detailUser_photo">
-                                    </p>
-                                    <p title="{{owner(user.userId)}}" class="nameMember member">
-                                      {{user.userLogin}}
-                                    </p>
-                                </ng-container>
-                                <ng-template #userImagesDiv>
-                                    <p title="{{owner(user.userId)}}">
-                                        <img class="imageMember" [src]="defaultUserImage">
-                                    </p>
-                                    <p title="{{owner(user.userId)}}" class="nameMember member">
-                                      {{user.userLogin}}
-                                    </p>
-                                </ng-template>
-                            </div>
-                        </div>
-                        <!--<div class="paginationMemberDiv col-xxl-6 col-xl-6 col-lg-6 col-md-6 col-sm-6">
-                            <ul class="row pagination paginationMember">
-                                <li class="page-item" *ngIf="pageMember!=0;"><a
-                                        class="page-link previousMember"
-                                        (click)="setPageMember(-1, userGroup.userGroupId)">
-                                    < </a></li>
-                                <li *ngFor="let user of groupMembers" class="page-item">
+                        <div class="paginationMemberDiv col-xxl-6 col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+                            <div class="row">
+                                <div *ngFor="let user of groupMembers" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
                                     <ng-container *ngIf="user.userPhoto; else userImagesDiv">
-                                        <p title="{{owner(user.userId)}}" class="nameMember member">
+                                        <p title="{{ownerLabel(user.userId)}}" class="imageP">
                                             <img class="imageMember" [ngClass]="ownerBorder(user.userId)"
-                                                 [src]="user.userPhoto" alt="" id="detailUser_photo">
+                                               [src]="user.userPhoto" alt="" id="detailUser_photo">
                                         </p>
-                                        <p title="{{owner(user.userId)}}" class="nameMember member">
-                                            {{user.userLogin}}
+                                        <p title="{{ownerLabel(user.userId)}}" class="member">
+                                          {{user.userLogin}}
                                         </p>
                                     </ng-container>
                                     <ng-template #userImagesDiv>
-                                        <p title="{{owner(user.userId)}}" class="nameMember member">
-                                            <img class="imageMember"
-                                                 [src]="defaultUserImage">
+                                        <p title="{{ownerLabel(user.userId)}}" class="imageP">
+                                            <img class="imageMember" [ngClass]="ownerBorder(user.userId)" [src]="defaultUserImage">
                                         </p>
-                                        <p title="{{owner(user.userId)}}" class="nameMember member">
-                                            {{user.userLogin}}
+                                        <p title="{{ownerLabel(user.userId)}}" class="member">
+                                          {{user.userLogin}}
                                         </p>
                                     </ng-template>
-                                </li>
-                                <li class="page-item" *ngIf="pageMember+1<totalPageMember"><a
-                                        class="page-link nextMember" (click)="setPageMember(1, userGroup.userGroupId)">
-                                    > </a>
-                                </li>
-                            </ul>
-                        </div>-->
+                                </div>
+                                <div *ngIf="totalMembers > sizeMember" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 more" (click)="getMoreMembers();"><a>
+                                    {{more}}</a></div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="modal-footer paginationUserGroupDiv">
-                        <ul class="row pagination paginationUserGroup">
-                            <li class="page-item" [ngClass]="previousUserGroup"
-                                *ngIf="(_pageUserGroup!=0) || (_pageUserGroup==0 && _indexUserGroup !=0)"><a
-                                    class="page-link previousUserGroup" (click)="setPageUserGroup(-1)">Anterior</a>
+                    <div class="modal-footer">
+                        <ul class="row paginationUserGroup">
+                            <li [ngClass]="previousUserGroup" *ngIf="previous">
+                                <a class="previousUserGroup" (click)="setPageUserGroup(-1); pageMember=0">Anterior</a>
                             </li>
-                            <li class="page-item" [ngClass]="nextUserGroup"
-                                *ngIf="(_pageUserGroup+1<_totalPagesUserGroup) || (_pageUserGroup+1==_totalPagesUserGroup && _indexUserGroup+1 !=_sizeUserGroup && _userGroups[_indexUserGroup+1]!=undefined)">
-                                <a class="page-link nextUserGroup" (click)="setPageUserGroup(1)">Siguiente</a>
+                            <li [ngClass]="nextUserGroup" *ngIf="next">
+                                <a class="nextUserGroup" (click)="setPageUserGroup(1); pageMember=0">Siguiente</a>
                             </li>
                         </ul>
                     </div>
