--- a/src/main/resources/APachas/src/app/components/groups/createGroup/createGroup.component.html
+++ b/src/main/resources/APachas/src/app/components/groups/createGroup/createGroup.component.html
@@ -16,8 +16,8 @@
                                        id="createUserGroup_userGroupPhoto" name="userGroupPhoto">
                                 <label title="Cambiar imagen de grupo" for="createUserGroup_userGroupPhoto"
                                        (mouseover)="changeStyle($event)" (mouseout)="changeStyle($event)">
-                                    <ng-container *ngIf="userGroup.userGroupPhoto; else imagesDiv">
-                                        <img class="image" [src]="userGroup.userGroupPhoto" alt=""
+                                    <ng-container *ngIf="userGroup.groupPhoto; else imagesDiv">
+                                        <img class="image" [src]="userGroup.groupPhoto" alt=""
                                              id="createUserGroup_photo">
                                     </ng-container>
                                     <ng-template #imagesDiv>
@@ -38,7 +38,7 @@
                                                class="inputs" placeholder="Nombre*" minlength="1" maxlength="40"
                                                pattern="^[a-zA-ZáéíóúüñÁÉÍÓÚÜÑ1-9,.'-]([ ]?[a-zA-ZáéíóúüñÁÉÍÓÚÜÑ1-9,.'-]+)*"
                                                title="Puede contener letras, máximo 40 caracteres. Campo obligatorio"
-                                               [(ngModel)]="userGroup.userGroupName" required
+                                               [(ngModel)]="userGroup.groupName" required
                                                #userGroupNameForm="ngModel" value="gggg">
                                         <div *ngIf="createUserGroupForm.onSubmit(undefined) && userGroupNameForm.invalid  || userGroupNameForm.invalid && userGroupNameForm.value != null"
                                              class="alert alert-danger">
@@ -59,7 +59,7 @@
                                                   name="userGroupDescription" placeholder="Descripción"
                                                   pattern="^[a-zA-ZáéíóúüñÁÉÍÓÚÜÑ1-9,.'-]([ ]?[a-zA-ZáéíóúüñÁÉÍÓÚÜÑ1-9,.'-]+)*"
                                                   title="Puede contener letras y números, máximo 100 caracteres"
-                                                  [(ngModel)]="userGroup.userGroupDescription"
+                                                  [(ngModel)]="userGroup.groupDescription"
                                                   #userGroupDescriptionForm="ngModel">
                                         </textarea>
                                         <div *ngIf="createUserGroupForm.submitted && userGroupDescriptionForm.invalid  || userGroupDescriptionForm.invalid && userGroupDescriptionForm.value!= null"
@@ -72,7 +72,6 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
                     <div class="row">
                         <div class="col-xxl-12 col-xl-12 col-lg-12 col-md-12 col-sm-12"
                              title="Selecciona los miembros del grupo">
@@ -115,6 +114,7 @@
                                 </ng-template>
                             </ng-select>
                         </div>
+                    </div>
                     </div>
                     <div class="modal-footer">
                         <div class="buttons">
